# tango-icon-naming

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  icon-name-mapping.pl.in  icon-naming-utils-uninstalled.pc.in  icon-naming-utils.pc.in  legacy-icon-mapping.xml
